cleaned clinic scss

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -329,11 +329,30 @@ ion-item.item-holder {
 	border-top: 0 !important;
 	background-color: transparent !important;
 	width: 100%;
+	padding: 0;
 
-	.item-inner {
-		box-shadow: none !important;
-		border: none !important;
+	&.item-md {
+		padding: 0;
+		.item-inner {
+			box-shadow: none !important;
+			border: none !important;
+
+			padding: 0;
+		}
 	}
+
+	&.item-ios {
+		padding: 0;
+
+		.item-inner {
+			box-shadow: none !important;
+			border: none !important;
+
+			padding: 0;
+		}
+	}
+
+	
 }
 
 .control-bar{
