removed h1 class of change password form label. temporarily removed unsubscribe in submitform of profifle form. implemented retrieval of no of clinics and user contacts for clinics

--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -1,21 +1,21 @@
 <form [formGroup]="changePasswordForm" #form="ngForm" (ngSubmit)="submitForm(xhr)">
     <ion-list>
         <div class="form-group">
-            <ion-label class="form-label h1">Old Password</ion-label>
+            <ion-label class="form-label">Old Password</ion-label>
             <ion-item round>
                 <ion-input type="password" formControlName="oldPassword"></ion-input>
             </ion-item>
             <div class="error-message" *ngIf="changePasswordForm.get('oldPassword').invalid">
                 {{ errors.oldPassword }}
             </div>
-            <ion-label class="form-label h1">Password</ion-label>
+            <ion-label class="form-label">Password</ion-label>
             <ion-item round>
                 <ion-input type="password" formControlName="password"></ion-input>
             </ion-item>
             <div class="error-message" *ngIf="changePasswordForm.get('password').invalid">
                 {{ errors.password }}
             </div>
-            <ion-label class="form-label h1">Re-Type Password</ion-label>
+            <ion-label class="form-label">Re-Type Password</ion-label>
             <ion-item round>
                 <ion-input type="password" formControlName="confirm"></ion-input>
             </ion-item>
@@ -25,6 +25,6 @@
         </div>
     </ion-list>
     <div center>
-        <xhr-button  #xhr round large color="accent" [disabled]="changePasswordForm.pristine"> Change Password </xhr-button>
+        <xhr-button #xhr round large color="accent" [disabled]="changePasswordForm.pristine"> Change Password </xhr-button>
     </div>
 </form>
