--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -52,7 +52,7 @@
                     <ion-row>
                         <ion-col col-12 col-sm-6 col-md-6>
                             <ion-label class="form-label">Medical Arts <span *ngIf="isEditMode()">*</span></ion-label>
-                            <ion-item round>
+                            <ion-item ion-item class="item-holder">
                                 <ion-select class="options" name="medicalArt" formControlName="medicalArt">
                                     <ion-option *ngFor="let type of medicalArts" [value]="type?.code">{{ type?.description }}</ion-option>
                                 </ion-select>
@@ -88,7 +88,7 @@
                         <ion-label class="form-label">Contact</ion-label>
                     </ion-col>
                     <ion-col col-6 col-sm-6 col-md-6>
-                        <ion-label class="form-link" (click)="addContact($event)"  color="accent-dark">+ add Contact</ion-label>
+                        <ion-label class="form-link" (click)="addContact($event)" color="accent-dark">+ add Contact</ion-label>
                     </ion-col>
                 </ion-row>
                 <ion-row class="contact-header">
@@ -107,12 +107,12 @@
                         <ion-label>{{contact.contact}}</ion-label>
                     </ion-col>
                     <ion-col col-3 col-sm-3 col-md-3>
-                        <ion-icon name="trash" (click)="removeContact($event,idx)"></ion-icon>
+                        <ion-icon name="trash" (click)="removeContact($event,idx)" color="accent-dark"></ion-icon>
                     </ion-col>
                 </ion-row>
                 <ion-row *ngIf="errors.contactNo">
                     <ion-col col-12 col-sm-12 col-md-12>
-                         <div class="error-message">
+                        <div class="error-message">
                             {{ errors.contactNo }}
                         </div>
                     </ion-col>
