refactored profile form

--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -25,6 +25,6 @@
         </div>
     </ion-list>
     <div center>
-        <xhr-button #xhr round large color="accent" [disabled]="changePasswordForm.pristine"> Change Password </xhr-button>
+        <xhr-button #xhr round large color="accent" [disabled]="changePasswordForm.pristine || form.pristine"> Change Password </xhr-button>
     </div>
 </form>
