--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -263,6 +263,18 @@ ion-content{
 
 	}
 
+	// Invalid Rounded Select Inputs that are not dirty, invalid and not disabled
+	ion-list[role="radiogroup"]:not(.ng-dirty).ng-invalid:not(.item-input-disabled) {
+		display: inline-block;
+		border: none !important;
+	}
+
+	// Invalid Rounded Select Inputs that are invalid and not disabled
+	ion-list[role="radiogroup"].ng-invalid:not(.item-input-disabled) {
+		display: inline-block;
+		border: 1px solid $danger !important;
+	}
+
     .error-message{
     	margin: 10px;
     	text-align: left;
