--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -85,7 +85,7 @@
                 </ion-row>
                 <ion-row class="contact-control">
                     <ion-col col-6 col-sm-6 col-md-6>
-                        <ion-label class="form-label">Contact</ion-label>
+                        <ion-label class="form-label">Contact <span *ngIf="isEditMode()">*</span></ion-label>
                     </ion-col>
                     <ion-col col-6 col-sm-6 col-md-6>
                         <ion-label class="form-link" (click)="addContact($event)" color="accent-dark">+ add Contact</ion-label>
