--- a/src/pages/clinic-manager/clinic/clinic.scss
+++ b/src/pages/clinic-manager/clinic/clinic.scss
@@ -2,4 +2,26 @@ clinic-page {
     ion-icon.trash::before {
         font-size: 20px;
     }
+
+    .schedule-header{
+		ion-col{
+			&:last-child{
+				text-align: right;
+                ion-icon{
+                    font-size: 28px;
+                }
+			}	
+		}	
+	}
+
+    .schedule-details{
+		ion-col{
+			&:last-child{
+				text-align: right;
+                ion-icon{
+                    font-size: 28px;
+                }
+			}	
+		}	
+	}
 }
