created accordion comp. implemented accordion to clinic cards

--- a/src/pages/clinic-manager/clinic-manager.scss
+++ b/src/pages/clinic-manager/clinic-manager.scss
@@ -2,8 +2,16 @@ clinic-manager-page {
     .options {
         font-size: $h1;
     }
-}
 
-li {
-    word-wrap: break-word;
+    .actions-container {
+        margin-top: 20px;
+    }
+
+    ul {
+        margin: 0;
+    }
+
+    li {
+        word-wrap: break-word;
+    }
 }
