--- a/src/components/search-user-modal/search-user-modal.html
+++ b/src/components/search-user-modal/search-user-modal.html
@@ -43,7 +43,7 @@
         <ion-card *ngFor="let user of users" (click)="selectUser(user)">
             <ion-item>
                 <ion-avatar item-left>
-                    <img src="http://www.wannia.com/wp-content/themes/pintores/images/default_picture.gif">
+                    <img src="{{ user.img }}">
                 </ion-avatar>
                 <p>Name: {{ getFullName(user) }}</p>
                 <p>Email: {{ user.email }}</p>
