removed unnecessary nav param for sched modal

--- a/src/components/schedule-modal/schedule-modal.html
+++ b/src/components/schedule-modal/schedule-modal.html
@@ -4,7 +4,7 @@
             <button ion-button icon-only navPop><ion-icon name="close"></ion-icon></button>
         </ion-buttons>
         <ion-title>
-            {{ header }}
+            Add Schedule
         </ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="save()"><ion-icon name="checkmark"></ion-icon></button>
