adjusted modal ion content. initial get clinic access by user id

--- a/src/components/search-user-modal/search-user-modal.html
+++ b/src/components/search-user-modal/search-user-modal.html
@@ -8,7 +8,7 @@
         </ion-title>
     </ion-navbar>
 </ion-header>
-<ion-content>
+<ion-content #Content padding>
     <form [formGroup]="searchForm" #form="ngForm" #form="ngForm" (ngSubmit)="xhr.submit($event)">
         <ion-grid>
             <ion-row>
