--- a/src/components/contact-modal/contact-modal.html
+++ b/src/components/contact-modal/contact-modal.html
@@ -11,7 +11,7 @@
 		</ion-buttons>
 	</ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content #Content padding>
 	<form #form="ngForm" (ngSubmit)="save()" [formGroup]="contactForm">
 		<ion-grid>
 			<ion-row>
