--- a/src/components/schedule-modal/schedule-modal.html
+++ b/src/components/schedule-modal/schedule-modal.html
@@ -11,7 +11,7 @@
         </ion-buttons>
     </ion-navbar>
 </ion-header>
-<ion-content>
+<ion-content #Content padding>
     <form [formGroup]="scheduleForm" #form="ngForm" (ngSubmit)="save()">
         <ion-grid>
             <ion-row>
