Clinic selection page; Schedules' initial function done and next

--- a/src/components/upload-photo/upload-photo.html
+++ b/src/components/upload-photo/upload-photo.html
@@ -22,6 +22,6 @@
 		</div>
 		<button ion-button round large color="accent"
 		(click)="submit()">Submit</button>
-		<button ion-button round large outline color="accent" (click)="clear()">Clear</button>
+		<button ion-button round large outline color="accent" (click)="skip()">Skip</button>
 	</div>
 </ion-content>
