inlined create clinic and schedule modal with clinic details retrieval json

--- a/src/components/schedule-modal/schedule-modal.html
+++ b/src/components/schedule-modal/schedule-modal.html
@@ -16,7 +16,7 @@
         <ion-grid>
             <ion-row>
                 <ion-col col-4 col-sm-4 col-md-4>
-                    <ion-label class="form-label">Day *</ion-label>
+                    <ion-label class="form-label">Day of Week *</ion-label>
                     <ion-item class="item-holder">
                         <ion-select class="options" name="day" formControlName="day">
                             <ion-option *ngFor="let day of days; let i = index" [value]="i">{{ day }}</ion-option>
