--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -89,8 +89,8 @@ $loading-md-box-shadow-color: none;
 // default are overridden.
 
 @import "ionic.theme.default";
-$modal-inset-width : 100%;
-$modal-inset-height-large : 100%;
+// $modal-inset-width : 100%;
+// $modal-inset-height-large : 100%;
 
 // Ionicons
 // --------------------------------------------------
