--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -456,3 +456,8 @@ div [frame]{
 	border: dashed 1px $primary-light;
 	border-radius: 4px;
 }
+
+ion-icon[text]{
+	font-family: 'arial';
+	font-size: .3rem;
+}
