--- a/src/pages/schedule/schedule.scss
+++ b/src/pages/schedule/schedule.scss
@@ -6,11 +6,39 @@ schedule-page{
 	}
 	ion-content{
 		ion-item{	
-		ion-avatar>img{
-				height: 90px !important;
-				width: 90px !important;
-				margin-right: 10px;
+			ion-avatar{
+				img{
+					height: 90px !important;
+					width: 90px !important;
+					margin-right: 10px;
+				}
+				div{
+				    background-color: $accent-light;
+				    border-radius: 50%;
+				    height: 90px;
+				    width: 90px;
+				    display: table-cell;
+				    text-align: center;
+				    vertical-align: middle;
+				    font-size: 50px;
+				}
 			}
+		}
+
+		ion-list ion-item{
+			ion-avatar{
+				div{
+				    background-color: $accent-light;
+				    border-radius: 50%;
+				    height: 45px;
+				    width: 45px;
+				    display: table-cell;
+				    text-align: center;
+				    vertical-align: middle;
+				    font-size: 24px;
+				}
+			}
+			
 		}
 
 		ion-list{
