--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -91,9 +91,35 @@ ion-content{
 	}
 
 	ion-item[clean]{
-		padding-left : 0px !important;
-		.item-inner{
-			padding-right: 0px !important;
+		// padding-left : 0px !important;
+		// .item-inner{
+		// 	padding-right: 0px !important;
+		// }
+		border-bottom: 0 !important;
+		border-top: 0 !important;
+		background-color: transparent !important;
+		width: 100%;
+		padding: 0;
+
+		&.item-md {
+			padding: 0;
+			.item-inner {
+				box-shadow: none !important;
+				border: none !important;
+
+				padding: 0;
+			}
+		}
+
+		&.item-ios {
+			padding: 0;
+
+			.item-inner {
+				box-shadow: none !important;
+				border: none !important;
+
+				padding: 0;
+			}
 		}
 	}
 
@@ -410,10 +436,12 @@ ion-item.item-holder {
 }
 
 form {
+
 	.form-label{
 		margin: 2% 0 2% 0;
 		font-weight: bold;
 	}
+	
 	.form-link{
 		margin: 2% 0 2% 0;
 		// font-weight: bold;
@@ -426,9 +454,11 @@ form {
 			}	
 		}	
 	}
+
 	.contact-header{
 		padding: 0 10px;
 	}
+
 	.contact-details{
 		padding: 0 10px;
 		ion-col:last-child{
@@ -438,8 +468,14 @@ form {
 			}
 		}
 	}
+
 	.form-group{
 		margin:3px;
+	}
+
+	ion-col.col {
+		padding-left: 5px;
+		padding-right: 5px;
 	}
 }
 
