refactored form types D - doctor ND - non doctor

--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -27,7 +27,7 @@
                     </ion-item>
                 </ion-col>
             </ion-row>
-            <div [hidden]="formType !== 'doctor'">
+            <div [hidden]="formType !== 'D'">
                 <ion-row>
                     <ion-col col-12 col-sm-6 col-md-6>
                         <ion-label class="form-label">PRC License <span *ngIf="isEditMode()">*</span></ion-label>
